# sigma-guard

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CREATE_RELEASE.bat  CREATE_RELEASE.ps1  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  llms.txt  pyproject.toml  smithery.yaml
benchmarks/: README.md
contrib/: IANA_REPLY_DRAFT.txt
contrib/cosai-mcp/: RAGS_IANA_FOLLOWUP_DRAFT.txt  RAGS_REPLY_DRAFT.txt  RAGS_REPLY_DRAFT_2.txt  README.md  T09-002.json  check_resource_read.py  svr_chain_scenario.py  verified_output_profile.py
datasets/: cybersecurity.json  knowledge_graph.json  supply_chain.json
docker/: Dockerfile.engine  build.ps1
docs/: COSAI_T9_INTEGRATION.md  INTERFLUSH_LOWER_BOUND.md  NSA_MCP_SECURITY_ALIGNMENT.md  PLANTED_VIOLATION_BENCHMARK.md  REGISTRY_COPY_PASTE.md  REGISTRY_SUBMISSION.md  REVIEWER_RESPONSES.md  SVR_RECEIPT_EXAMPLE.json  SVR_VERIFY_QUICKSTART.md  graph_format.md  llm_agent_integration.md  mcp_server.md
examples/: basic_usage.py  claude_desktop_config.json  cosai_svr_gate.py  hermes_mcp_config.json  langchain_mcp_example.py  memgraph_trigger.py  neo4j_hook.py  streamable_http_config.json  tiny_contradiction.json  tiny_contradiction.py  verify_llm_output.py
scripts/: dev.ps1
sigma_guard/: __init__.py  cli.py  engine.py  entrypoint.py  free_tier.py  mcp_server.py  standalone_verifier.py  verdict.py
sigma_guard/adapters/: __init__.py  base.py  falkordb.py  memgraph.py  neo4j.py
sigma_guard/parsers/: __init__.py  edge_list.py  graphml.py  json_graph.py
tests/: test_core.py  test_mcp_tools.py
