[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigma-guard"
version = "0.1.0"
description = "Pre-commit contradiction detection for graph databases using sheaf cohomology"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.9"
authors = [
    {name = "Jason Volk", email = "jason@invariant.pro"},
]
keywords = [
    "graph-database",
    "contradiction-detection",
    "sheaf-cohomology",
    "data-integrity",
    "pre-commit-hook",
    "memgraph",
    "neo4j",
    "hallucination-detection",
    "knowledge-graph",
    "verification",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
memgraph = ["gqlalchemy>=1.0"]
neo4j = ["neo4j>=5.0"]
all = ["gqlalchemy>=1.0", "neo4j>=5.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
sigma-guard = "sigma_guard.cli:main"
sigma-verify = "sigma_guard.standalone_verifier:main"

[project.urls]
Homepage = "https://invariant.pro"
Repository = "https://github.com/invariant-research/sigma-guard"
Documentation = "https://invariant.pro/docs/sigma-guard"
Issues = "https://github.com/invariant-research/sigma-guard/issues"

[tool.setuptools.packages.find]
include = ["sigma_guard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
